# blog_django

./: README.md  pyproject.toml
mysite/blog/: admin.py  models.py  urls.py  views.py
mysite/blog/migrations/: 0001_initial.py  0002_alter_post_slug.py  0003_comment.py
mysite/blog/templates/: pagination.html
mysite/blog/templates/blog/: base.html
mysite/blog/templates/blog/post/: comment.html  detail.html  list.html  share.html
mysite/mysite/: settings.py
