[tool.black]
line-length = 120

[tool.isort]
profile = 'black'
line_length = 120

[tool.poetry]
name = "blog-django"
version = "0.1.0"
description = ""
authors = ["Marco Belo <marco.barone.belo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
python-decouple = "^3.8"


[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
